[-] Bug fixed.
[+] Feature added.
[*] Change.

2007-01-?? v0.9
===============
- the ant build script now also creates the dist folder if it does not exist (thanks to tahura)
- XML configuration now also works for JREs without having the StAX API present
* simplified the OVal XML configuration DTD
* when @AssertValid is used on a map the map's keys and values are now validated too by default (thanks to tahura)
+ added plugabble support for expression languages
+ added support for JavaScript as expression language via Mozilla Rhino
+ added support for Groovy as expression language
+ introduced @net.sf.oval.constraints.Assert for use with expression languages
+ introduced @net.sf.oval.constraints.Max
+ introduced @net.sf.oval.constraints.Min
+ introduced @net.sf.oval.constraints.Past
+ introduced @net.sf.oval.constraints.Future
+ introduced @net.sf.oval.guard.Pre for declaring pre conditions with an expression language
+ introduced @net.sf.oval.guard.Post for declaring post conditions with an expression language
+ constraint violation listeners can now also be registered for interfaces
+ added the concept of constraint profiles
+ added polish translation of the constraint violation messages (thanks to szymon_eu)
* ConstraintsViolatedException.getMessage() now returns the message of the first constraint violation (thanks to szymon_eu)
+ added Guard.setExceptionTranslator() allowing you to change the type of exception that is thrown on constraint violations 
+ Validation/Guarding of static fields and methods is now supported

Refactoring:
* net.sf.oval.constraints.NoSelfReference: renamed @NotSelfRef to @NoSelfReference
* net.sf.oval.Constraint: moved from package net.sf.oval.annotations
* net.sf.oval.constraints.ConstraintSet: renamed from net.sf.oval.annotations.DefineConstraintSet
* everything related to programming by contract has been moved into a new net.sf.oval.guard package