@@ -1,2 +1,4 @@
 - support constraints specified for method parameters in interfaces
+- support constraints in conjunction with inheritance
 - multi-lingual support for all exceptions
+- complete the programming by contract implementation
