@@ -20,7 +20,7 @@ import java.lang.annotation.Target;
 
 /**
  * Before the annotated method is executed all field and getter constraints 
- * of this object are validated.
+ * (invariants) of this object are validated.
  * 
  * If constraint violations occur, the annotated method will not be executed 
  * instead it will throw a ConstraintsViolatedException exception.<br> 
